--- a/app/templates/admin/admin_account.html
+++ b/app/templates/admin/admin_account.html
@@ -6,10 +6,10 @@
 
 {% block admin_content %}
 <div class="entry-box account">
-    <h4><strong><i>{{ current_user.username }}</i>，欢迎来到Blog_mini管理平台！</strong></h4>
+    <h4><strong><i>{{ current_user.username }}</i>，欢迎来到博客管理平台！</strong></h4>
     <hr/>
     <div class="user-info">
-        <img class="img-rounded profile-thumbnail" src="{{ current_user.gravatar(size=128) }}">
+        <img class="img-rounded profile-thumbnail" src="../../static/images/avatar_big.jpg">
         <div class="profile-header">
             <h5>昵称：</h5>
             <h4 class="username">{{ current_user.username }}</h4>
