--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,7 +73,6 @@
                     {% if current_user.is_authenticated %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="{{ current_user.gravatar(size=18) }}">
                                 {{ current_user.username }} <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
@@ -137,9 +136,9 @@
 {% endblock %}
 <div class="footer">
     <p class="footer-content">
-        @2016
-        <a href="#">Blog_mini</a>
-        -开源博客系统
+        @2018
+        <a href="#">RebelBIrd</a>
+        -技术博客
         {% if not current_user.is_authenticated %}
             -<a href="{{ url_for('auth.login') }}">
             <span class="glyphicon glyphicon-wrench">后台管理</span>
