--- a/app/templates/admin/submit_articles.html
+++ b/app/templates/admin/submit_articles.html
@@ -1,7 +1,7 @@
 {% extends 'admin/admin_base.html' %}
 
 {% block title %}
-    Blog_mini -提交博文
+    RebelBIrd -提交博文
 {% endblock %}
 
 {% block stylesheet %}
